# NaLamKI-SDK

./: mqtt_playground.ipynb  pyproject.toml  requirements.txt
sdk/: service.py
sdk/helper/: rabbitmq.py
sdk/model/: output_data.py
sdk/model/action/: action.py  action_data.py
sdk/model/annotations/: bbox.py
sdk/model/datasets/: datafile.py  dataimage.py  dataset.py  datavalue.py  timeseries.py  timeseriesItem.py
sdk/model/geojson/: feature.py  property.py
